# django-dynamic-theme

./: .flake8  .gitignore  .liccheck.ini  .pre-commit-config.yaml  .pylintrc.toml  .readthedocs.yaml  LICENSE  README.md  SECURITY.md  make_migrations.py  manage.py  pyproject.toml  runtest.py
.github/: dependabot.yml
.github/workflows/: django.yml  docker-build.yml  documentation.yml  license.yml  lint.yml  python-publish.yml  release.yml  tests.yml
django_dynamic_theme/: admin.py  apps.py  context_processor.py  errors.py  middleware.py  models.py  settings.py  signals.py  tests.py
django_dynamic_theme/migrations/: 0001_initial.py  0002_background_name.py  0003_alter_background_primary_bg.py  0004_alter_background_primary_bg_theme.py  0005_remove_theme_background_theme_background.py  0006_alter_theme_background.py  0007_theme_default_theme_only_one_theme_can_be_default_.py  0008_alter_theme_default.py  0009_navbar.py  0010_theme_navbar.py  0011_navbar_font_size.py  0012_navbar_text_color.py  0013_navbar_text_opacity.py  0014_alter_navbar_opacity.py  0015_mediagallery.py  0016_theme_media_gallery.py  0017_alter_mediagallery_options_alter_theme_navbar.py
django_dynamic_theme/util/: color_converter.py  scss_editor.py
django_dynamic_theme/utill/: color_converter.py  scss_editor.py
docs/: conf.py  django_dynamic_theme.migrations.rst  django_dynamic_theme.rst  django_dynamic_theme.utill.rst  index.rst  modules.rst  runtest.rst  tests.rst
docs/source/: conf.py  index.rst  requirements.txt
docs/source/subjects/: navbar.rst
example_app/: manage.py
example_app/example_app/: asgi.py  settings.py  urls.py  views.py  wsgi.py
example_app/example_app/templates/example_app/: index.html
example_app/templates/: base.html
example_app/templates/example_app/: index.html
example_app/themes/: theme.scss
tests/: settings.py  test_context_processor.py  test_middleware.py  test_models.py  test_models_integration.py  test_signals.py  test_utils.py
