[tool.poetry]
name = "django-dynamic-theme"
version = "0.0.1"
description = ""
authors = ["Segelzwerg <25705862+Segelzwerg@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
setuptools = "^69.2.0"
django-bootstrap5 = "^23.4"
django-compressor = "^4.4"
django-libsass = "^0.9"
django-colorfield = "^0.11.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
coverage = "^7.4.4"
flake8 = "^7.0.0"
pylint-django = "^2.5.5"
bandit = "^1.7.8"
pre-commit = "^3.7.0"
pytest = "^8.1.1"
liccheck = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["tests/"]