

[tool.poetry]
name = "django-dynamic-theme"
version = "0.0.10"
description = "This enables the administrator of a django website to change the theme on the fly."
authors = ["Segelzwerg <25705862+Segelzwerg@users.noreply.github.com>"]
readme = "README.md"
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
django-colorfield = "^0.11.0"
django-compressor = "^4.4"
django-libsass = "^0.9"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
coverage = "^7.4.4"
flake8 = "^7.0.0"
pylint-django = "^2.5.5"
bandit = "^1.7.8"
pre-commit = "^3.7.0"
pytest = "^8.1.1"
liccheck = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["tests/"]
